// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Progress overview 1 snapshot 1`] = `
<DocumentFragment>
  <progress
    class="css-eqwi6i"
    max="100"
    value="72"
  />
</DocumentFragment>
`;

exports[`Progress overview 2 snapshot 1`] = `
<DocumentFragment>
  <progress
    class="css-eqwi6i"
    max="100"
    value="64"
  />
</DocumentFragment>
`;

exports[`Progress overview 3 snapshot 1`] = `
<DocumentFragment>
  <progress
    class="css-eqwi6i"
    max="100"
    value="37"
  />
</DocumentFragment>
`;

exports[`Progress overview 4 snapshot 1`] = `
<DocumentFragment>
  <progress
    class="css-eqwi6i"
    max="100"
    value="63"
  />
</DocumentFragment>
`;

exports[`Progress overview 5 snapshot 1`] = `
<DocumentFragment>
  <progress
    class="css-eqwi6i"
    max="100"
    value="74"
  />
</DocumentFragment>
`;
